fix(processor): FK 적용 원자화·제네릭 가드 추가·PK 검증 시점 이동(P1)
- RelationshipHandler
  - processToOneRelationship: FK 생성 로직을 사전 검증(loop1)과 적용(loop2)로 분리해
    복합키에서의 부분 오염 방지. 타입 불일치/중복 FK명/PK 매핑 오류 시 ERROR 로그 +
    entity.setValid(false) + 즉시 중단.
  - processUnidirectionalOneToMany_FK: 위와 동일한 2단계 적용 패턴 도입.
  - processUnidirectionalOneToMany_JoinTable / processOwningManyToMany:
    제네릭 가드(DeclaredType/TypeArgs/Collection 서브타입) 추가.
  - @JoinColumns / joinColumns / inverseJoinColumns 개수 일치 검증 강화.
  - JoinTableDetails 도입 및 join table 생성 시 referenced/target PK 사이드 참조 버그 수정.
  - 메시지에 필드명/테이블명 포함하여 디버깅 가시성 향상.
- EntityHandler
  - 최종 PK 검증을 제거(지연)하여 @MapsId 승격 이전의 오탐 제거.
- JpaSqlGeneratorProcessor
  - 관계 해석 이후(2차 패스)로 최종 PK 검증 이동. FQN 기반 TypeElement 조회 및
    증분 컴파일 환경에서 TypeElement null 시 WARN 처리.
  - @Converter(autoApply=true) 제네릭 미해결 시 WARNING 로그 추가.
- 테스트
  - raw 컬렉션/비-Declared 제네릭 인자 가드 테스트 추가.
  - 복합키+타입 충돌 시 ERROR + valid=false + 미생성 검증.
  - 중복 FK 이름(@JoinColumns) 오류 검증.
  - 정상 복합키/OneToMany(FK)/ManyToMany/JoinTable 경로의 정상 생성 검증.